[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/menu/header_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/menu/main/icons/active_quit_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/menu/general_icons/back_arrow_icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu/MenuHeader.gd" type="Script" id=5]
[ext_resource path="res://assets/menu/general_icons/delta_logo_placeholder.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/general_icons/settings_icon.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="MenuHeader" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.1
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Bars" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Header" type="Control" parent="Bars"]
margin_right = 1280.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Bars/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="GameLogo" type="HBoxContainer" parent="Bars/Header"]
anchor_top = 0.111
anchor_right = 0.1
anchor_bottom = 0.9
margin_top = 0.00399971
margin_bottom = 0.600002

[node name="VSeparator" type="VSeparator" parent="Bars/Header/GameLogo"]
margin_bottom = 29.0
custom_styles/separator = SubResource( 1 )

[node name="Logo" type="TextureRect" parent="Bars/Header/GameLogo"]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="Bars/Header/GameLogo"]
margin_left = 48.0
margin_right = 128.0
margin_bottom = 29.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "DELTA"
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Bars/Header"]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_constants/separation = 15
alignment = 2

[node name="SettingsButton" type="TextureButton" parent="Bars/Header/VBoxContainer"]
margin_left = 969.0
margin_right = 989.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="QuitButton" type="TextureButton" parent="Bars/Header/VBoxContainer"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="PageTitle" type="Control" parent="Bars"]
margin_top = 36.0
margin_right = 1280.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Bars/PageTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.282353, 0.45098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Bars/PageTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Bars/PageTitle/VBoxContainer"]
margin_top = 8.0
margin_right = 1280.0
margin_bottom = 27.0
custom_constants/separation = 10

[node name="VSeparator" type="VSeparator" parent="Bars/PageTitle/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 19.0
custom_constants/separation = 60

[node name="MainReturn" type="HBoxContainer" parent="Bars/PageTitle/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 70.0
margin_right = 133.0
margin_bottom = 19.0

[node name="Button" type="Button" parent="Bars/PageTitle/VBoxContainer/HBoxContainer/MainReturn"]
margin_right = 40.0
margin_bottom = 19.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "MAIN"
icon_align = 2
expand_icon = true

[node name="BackArrow" type="TextureRect" parent="Bars/PageTitle/VBoxContainer/HBoxContainer/MainReturn"]
margin_left = 44.0
margin_right = 63.0
margin_bottom = 19.0
rect_min_size = Vector2( 19, 0 )
texture = ExtResource( 4 )
expand = true

[node name="ReturnButton" type="Button" parent="Bars/PageTitle/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 89.0
margin_bottom = 19.0
rect_min_size = Vector2( 19, 0 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 4 )
icon_align = 2
expand_icon = true

[node name="CurrentMenu" type="Label" parent="Bars/PageTitle/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 139.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 8 )
text = "MAIN"
valign = 1

[connection signal="button_up" from="Bars/Header/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="Bars/Header/VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="Bars/PageTitle/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_ReturnButton_button_up"]
